--- a/style.css
+++ b/style.css
@@ -1,131 +1,166 @@
-
 body {
   width: 100%;
   height: 100vh;
   margin: 0;
-  background-image: url('./images/layers.png');
+  background: url('./images/layers-color.png') no-repeat;
+  background-size: cover;
 }
+
 header {
-  display: flex;
+  /* display: flex; - course flex is inside */
   padding: 20px;
   align-items: center;
 }
+
 .header {
-  /* background: darkred; */
-    display: flex;
-    /* padding: 20; */
+  display: flex;
 }
+
 .header-wrapper {
   color: white;
   display: flex;
-  /* padding: 2,2,2,2; */
   width: calc(100% - 70px);
   justify-content: space-between;
   align-items: center;
 }
+
 .empty {
   width: fit-content;
 }
+
 .nav {
-  /* color: white; */
-  display: block; /*flex;*/
-  /* padding: 2,2,2,2; */
+  display: block;
   font-family: Montserrat;
   font-size: 20px;
-  /* margin: 0 100px; */
   margin: 0 2 0 300px;
-  /* line-height: 1; */
   font-weight: 600;
 }
-  /* .nav  */
-  a {
-     color: #ffffff;
+
+a {
+  color: #ffffff;
 }
+
 .button-menu {
-  /* width: 30px; */
   margin: auto 20px;
+  cursor: pointer;
 }
+
 header .button-menu img {
   width: 30px;
 }
+
 .logo {
   width: 100%;
   max-width: 250px;
   height: 70px;
   margin: 0 20px;
-  /* background: url(../images/logo.png) no-repeat; */
   background-size: contain;
-  background-position: center;}
-/* header .container .navigation a {
+  background-position: center;
+}
+
+a {
     font-family: Montserrat;
     font-size: 20px;
     margin: 0 10px;
     line-height: 1;
     font-weight: 600;
     color: #ffffff;
-  } */
-h1,h3,right-title,right-h2 {
-  color: #ffffff; 
-}
-main {
-   padding: 20;
-   display: flex;
-}
-main .left-side{
-  /* display: flex; */
-  /* direction: column; */
-  position: relative;
-  background: url(./images/left-oval.png) no-repeat;
+    text-decoration:none;
+  } 
 
+h1,
+.title,
+.right-side-title,
+.right-side-h2 {
+  color: #ffffff;
+  align-items: center;
+  }
+
+  h2  {
+    color: #ffffff;
+    text-align: center;
+  }
+
+main {
+  padding: 20;
+  display: flex;
+  align-items: center;
+  justify-content: center;}
+
+main .left-side {
+  position: relative;
+  width:  50%;
+  height: 50%;
+  padding: 80;
+  margin: 60;
+  /* text-align: center; */
+ }
+
+
+main .title {
+  font-size: 80;
+  width: 50%;
+  text-align: center;
+  padding: 0 0 0 80;
+  margin: 0 0 0 0;
 }
-main .title
-{font-size: 150;
-}
+
 .right-side {
   padding: 50;
+  width: 50%;
 }
-.right-title {
+
+.right-side-title {
   font-family: Montserrat;
-  font-size: 35px;
+  font-size: 24px;
 }
-.right-h2
- {
+
+.right-side-h2 {
   font-family: Montserrat;
-  font-size: 25px;
+  font-size: 26px;
 }
-.right-text{
+
+.right-side-text {
   font-family: Montserrat;
   font-size: 20px;
   line-height: 1.2;
   font-weight: 300;
   color: #ffffff;
 }
-img .button{
+
+.right-side-submit {
+  cursor: pointer;
+}
+
+img .right-side-button {
   width: 493px;
   height: 137px;
   background-color: #ffffff;
   border-radius: 68.4px;
 }
-.right-button {
-position: absolute;
-padding: 10p;
-width: 80px;
-height: 75px;
-bottom: 0;
-right: 0;
-}
+
 img .left-oval {
   height: 30;
   width: 20;
   align-items: center;
 }
-ing .button-ring{
-height: 33;
-width:  33;
 
+button {
+  cursor: pointer; 
 }
 
+.right-button {
+  position: absolute;
+  width: 40px;
+  height: 130px;
+  /* увеличено с 0 до 20 для обеспечения отступа межжу эл-тами */
+  bottom: 20;
+  right: 0;
 }
 
-
-
+.right-button-ring {
+  height: 30;
+  width: 30;
+  cursor: pointer;
+  margin-bottom: 7;
+}
