--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
-  background: url('./images/layers-color.png') no-repeat;
+  background: url('./images/background.png') no-repeat;
   background-size: cover;
 }
 
@@ -22,10 +22,6 @@ header {
   width: calc(100% - 70px);
   justify-content: space-between;
   align-items: center;
-}
-
-.empty {
-  width: fit-content;
 }
 
 .nav {
@@ -59,50 +55,53 @@ header .button-menu img {
 }
 
 a {
-    font-family: Montserrat;
-    font-size: 20px;
-    margin: 0 10px;
-    line-height: 1;
-    font-weight: 600;
-    color: #ffffff;
-    text-decoration:none;
-  } 
+  font-family: Montserrat, sans-serif;
+  font-size: 20px;
+  margin: 0 10px;
+  line-height: 1;
+  font-weight: 600;
+  color: #ffffff;
+  text-decoration: none;
+}
 
 h1,
+h2,
 .title,
 .right-side-title,
+.right-side-text,
 .right-side-h2 {
+  font-family: Montserrat, sans-serif;
   color: #ffffff;
   align-items: center;
-  }
-
-  h2  {
-    color: #ffffff;
-    text-align: center;
-  }
+}
 
 main {
   padding: 20;
   display: flex;
   align-items: center;
-  justify-content: center;}
+  justify-content: center;
+}
 
 main .left-side {
   position: relative;
-  width:  50%;
+  width: 50%;
   height: 50%;
   padding: 80;
   margin: 60;
-  /* text-align: center; */
- }
+}
 
-
-main .title {
-  font-size: 80;
-  width: 50%;
+main .title,
+h2 {
+  width: 100%;
+  max-width: 200 px;
   text-align: center;
-  padding: 0 0 0 80;
-  margin: 0 0 0 0;
+  margin: 10px auto;
+  word-break: break-all;
+  /* justify-content: center;*/
+}
+
+.title {
+  font-size: 80;
 }
 
 .right-side {
@@ -111,17 +110,15 @@ main .title {
 }
 
 .right-side-title {
-  font-family: Montserrat;
-  font-size: 24px;
+  /* font-family: Montserrat, sans-serif; */
+  font-size: 34px;
 }
 
 .right-side-h2 {
-  font-family: Montserrat;
   font-size: 26px;
 }
 
 .right-side-text {
-  font-family: Montserrat;
   font-size: 20px;
   line-height: 1.2;
   font-weight: 300;
@@ -146,14 +143,21 @@ img .left-oval {
 }
 
 button {
-  cursor: pointer; 
+  cursor: pointer;
+  height: 30px;
+  width: 130px;
+  border: 0;
+  border-radius: 30px;
+  text-align: center;
+  font-weight: 700;
+  font-size: medium;
 }
 
 .right-button {
   position: absolute;
   width: 40px;
   height: 130px;
-  /* увеличено с 0 до 20 для обеспечения отступа межжу эл-тами */
+  /* bottom - увеличено с 0 до 20 для обеспечения отступа межжу эл-тами */
   bottom: 20;
   right: 0;
 }
