--- a/style.css
+++ b/style.css
@@ -86,19 +86,17 @@ main .left-side {
   position: relative;
   width: 50%;
   height: 50%;
-  padding: 80;
-  margin: 60;
+  margin: 50;
 }
 
 main .title,
 h2 {
   width: 100%;
-  max-width: 200 px;
+  max-width: 200px;
   text-align: center;
   margin: 10px auto;
   word-break: break-all;
-  /* justify-content: center;*/
-}
+ }
 
 .title {
   font-size: 80;
@@ -110,7 +108,6 @@ h2 {
 }
 
 .right-side-title {
-  /* font-family: Montserrat, sans-serif; */
   font-size: 34px;
 }
 
@@ -127,13 +124,6 @@ h2 {
 
 .right-side-submit {
   cursor: pointer;
-}
-
-img .right-side-button {
-  width: 493px;
-  height: 137px;
-  background-color: #ffffff;
-  border-radius: 68.4px;
 }
 
 img .left-oval {
@@ -153,16 +143,16 @@ button {
   font-size: medium;
 }
 
-.right-button {
+.social-wrapper {
   position: absolute;
   width: 40px;
   height: 130px;
   /* bottom - увеличено с 0 до 20 для обеспечения отступа межжу эл-тами */
-  bottom: 20;
-  right: 0;
+  bottom: 40;
+  right: 20;
 }
 
-.right-button-ring {
+.social {
   height: 30;
   width: 30;
   cursor: pointer;
